<resources>
    <string name="app_name">WhoDo</string>
    <string name="MainAct_tab_title_hire">Contratar</string>
    <string name="MainAct_tab_title_favorites">Favoritos</string>
    <string name="MainAct_tab_title_messages">Mensajes</string>
    <string name="MainAct_tab_title_activity">Actividad</string>
    <string name="MainAct_tab_title_profile">Perfil</string>
    <string name="title_registration_data">Registrar Usuario</string>
    <string name="title_login">Login</string>
    <string name="profileFrag_text_profile_Config">CONFIGURACION DE LA CUENTA</string>
    <string name="profileFrag_text_profile_Name">NAME</string>
    <string name="profileFrag_text_profile_EditProfile">Editar Perfil</string>
    <string name="profileFrag_text_profile_UserType">TIPO DE USUARIO</string>
    <string name="profileFrag_text_profile_Asistency">ASISTENCIA</string>
    <string name="profileFrag_text_profile_Legal">INFORMACION LEGAL</string>
    <string name="profileFrag_text_profile_CloseSession">Cerrar Sesión</string>
    <string name="profileFrag_text_profile_Version">VERSION 1.0.0</string>
    <string name="profileFrag_image_View">USER PICTURE</string>
    <string name="profileFrag_ItemText_PersonalInfo">Información Personal</string>
    <string name="profileFrag_ItemText_SesionSecurity">Billeteras y Seguridad</string>
    <string name="profileFrag_ItemText_Payment">Pagos</string>
    <string name="profileFrag_ItemText_ProviderSettings">Configuracion Modo Proveedor</string>
    <string name="profileFrag_ItemText_HowItWorks">Como funciona WhoDo?</string>
    <string name="profileFrag_ItemText_Recomendations">Recomendaciones</string>
    <string name="profileFrag_ItemText_Support">Soporte</string>
    <string name="profileFrag_ItemText_Comments">Envia tus comentarios</string>
    <string name="profileFrag_ItemText_LegalTerms">Terminos de servicio</string>
    <string name="profileFrag_ItemText_PrivacyPolitics">Politicas de Privacidad</string>
    <string name="profileFrag_prifileActivity_PictureDescription">Pick your profile picture</string>
    <string name="PersonalInfoFrag_Description">Acerca de mi</string>
    <string name="PersonalInfoFrag_Description1">Editar tu descripcion</string>
    <string name="PersonalInfoFrag_Label_Description">Escribe algo sobre ti para que tus clientes o proveedores de servicios te conocan un poco</string>
    <string name="PersonalInfoFrag_Location">Ubicacion</string>
    <string name="PersonalInfoFrag_Location1">Editar Ubicacion</string>
    <string name="PersonalInfoFrag_Label_Location">Marca con un pin tu ubicacion e ingresa tu direccion incluyendo depto, piso y cualquier otro dato que ayude a otros usuarios a encontrarte.</string>
    <string name="PersonalInfoFrag_Languages">Idiomas</string>
    <string name="PersonalInfoFrag_Languages1">Editar Idiomas</string>
    <string name="PersonalInfoFrag_Label_Languages">Marca los idiomas en los que eres capaz de darte a entender.</string>
    <string name="PersonalInfoFrag_UserName">Nombre de Usuario</string>
    <string name="PersonalInfoFrag_UserName1">Editar Nombre de Usuario</string>
    <string name="PersonalInfoFrag_PhoneNumber">Numero Telefonico </string>
    <string name="PersonalInfoFrag_PhoneNumber1">Editar Numero Telefonico </string>
    <string name="PersonalInfoFrag_Email">Correo Electronico</string>
    <string name="PersonalInfoFrag_Email1">Editar Correo Electronico</string>
    <string name="PersonalInfoFrag_VerifyButtonEmail">Actualizar</string>
    <string name="PersonalInfoFrag_Birthday">Fecha de Nacimiento</string>
    <string name="PersonalInfoFrag_Label_UserName">Escribe el nombre por el que quieres que otros usuarios te conozcan</string>
    <string name="PersonalInfoFrag_Label_PhoneNumber">Este numero sera utilizado para validar tu cuenta</string>
    <string name="PersonalInfoFrag_Label_Email">Esta direccion de correo esta asociada directamente a tu cuenta, se utiliza para logear y validar tu cuenta</string>
    <string name="ReadyLabelButton">Listo!</string>
    <string name="PersonalInfoFrag_UpdEmailDialog">Para actualizar tu correo electronico sera necesario desconectarte y se te enviara un correo para que valides la nueva direccion, deseas continuar?</string>
    <string name="PersonalInfoFrag_Hint_Email">Correo Electronico</string>
    <string name="PersonalInfoFrag_Hint_Password">Password</string>
    <string name="PersonalInfoFrag_Hint_NewEmail">Nuevo Correo Electronico</string>
    <string name="HireFragment_Label_ServiceFilter">Filtrar Proveedores de Servicios</string>
    <string name="HireFragment_Label_ServiceFilter1">Selecciona los servicios que deseas visibilidad y la distancia maxima a tu ubicación (ubicacion registrada en la aplicacion)</string>
    <string name="HireFragment_Label_ServiceFilter2">Distancia Maxima</string>
    <string name="HireFragment_Label_ServiceFilter3">Servicios</string>
    <string name="HireFragment_RadioButton_AllServiceFilter">Todos los Servicios</string>
    <string name="HireFragment_MapMarkerSnipets_AvgTariff">Tarifa Promedio: </string>
    <string name="HireFragment_MapMarkerSnipets_AvgCompletionTime">Tiempo Promedio: </string>
    <string name="HireFragment_MapMarkerSnipets_OverallScore">Puntaje General: </string>
    <string name="SecurityFrag_Password_ItemLabel_Title">Cambiar Password</string>
    <string name="SecurityFrag_Password_Label_Title">Password</string>
    <string name="SecurityFrag_Password_Label_TextHint">Para cambiar tu password requerimos que ingreses tus credenciales, luego ingreses el nuevo password cumpliendo los criterios</string>
    <string name="SecurityFrag_Password_Hint_Email">Correo Electronico</string>
    <string name="SecurityFrag_Password_Hint_Password">Old Password</string>
    <string name="SecurityFrag_Password_Hint_NewPass1">New Password</string>
    <string name="SecurityFrag_Password_Hint_NewPass2">New Password Again</string>
    <string name="SecurityFrag_WalletAddress_Label_Title">Retirar Fondos</string>
    <string name="SecurityFrag_WalletAddress_Label_Title1">Retirar Fondos</string>
    <string name="SecurityFrag_WalletAddress_Label_Amount">100.000.000</string>
    <string name="SecurityFrag_WalletAddress_Label_Unit">SAT</string>
    <string name="SecurityFrag_WalletAddress_Label_DollarValue">~$30298</string>
    <string name="SecurityFrag_WalletAddress_WithdrawLabel_Amount">202500</string>
    <string name="SecurityFrag_WalletAddress_WithdrawLabel_Message">Estas a punto de extraer:</string>
    <string name="SecurityFrag_WalletAddress_Label_TextHint">Desde aquipo podras extraer los pagos que hayas recibido por tus servicios o reintegros. Ingresa tus credenciales y luego el Invoice generado por la billetera Lightning Network de tu eleccion.</string>
    <string name="SecurityFrag_WalletAddress_Hint_Email">Correo Electronico</string>
    <string name="SecurityFrag_WalletAddress_Hint_Password">Password</string>
    <string name="SecurityFrag_WalletAddress_Hint_Address">Invoice</string>
    <string name="SecurityFrag_WithdrawButton">Retirar Fondos</string>
    <string name="PasswordConditions_CheckButton1">Debe tener entre 8 y 12 caracteres</string>
    <string name="PasswordConditions_CheckButton2">Deben incluir mayúsculas y minúsculas</string>
    <string name="PasswordConditions_CheckButton3">Debe incluir al menos 1 numero y caracter especial</string>
    <string name="PersonalInfoFrag_UpdPasswordDialog">Confirmas que deseas actualizar el password de tu cuenta?</string>
    <string name="PersonalInfoFrag_UpdWalletAddressDialog">Estas por actualizar la direccion de tu Billetera, recuerda que si tienes pagos o devoluciones pendientes esto podria causar perdida de tu dinero, deseas continuar?</string>
    <string name="ProviderModeFrag_SwitchCustomerModeTitle">Modo Proveedor</string>
    <string name="ProviderModeFrag_SwitchCustomerModeDesc">Activando el modo proveedor otros usuarios te veran en el mapa para contratarte por tus servicios, ademas podras configurar especializaciones entre otras opcioens</string>
    <string name="ProviderModeFrag_SwitchCustomerModeText_Off">Desactivar Modo Proveedor</string>
    <string name="ProviderModeFrag_SwitchCustomerModeText_On">Activar Modo Proveedor</string>
    <string name="ProviderModeFrag_Specialization_ItemLabel">Especializacion</string>
    <string name="ProviderModeFrag_Specialization_Tittle">Editar Especializacion</string>
    <string name="ProviderModeFrag_Specialization_Text">Marca los campos en los que puedes proveer servicios.</string>
    <string name="WorkOrderLifeCycleFrag_HeaderLabel">Orden de Trabajo</string>
    <string name="WorkOrderLifeCycleFrag_OrderIdLabel">Orden ID: No Definido</string>
    <string name="WorkOrderLifeCycleFrag_OpenStateLabel">ABIERTA</string>
    <string name="WorkOrderLifeCycleFrag_OnEvaluationStateLabel">EN EVALUACION</string>
    <string name="WorkOrderLifeCycleFrag_PlannedStateLabel">PLANIFICADA</string>
    <string name="WorkOrderLifeCycleFrag_ConfirmedStateLabel">CONFIRMADA</string>
    <string name="WorkOrderLifeCycleFrag_DiagnosedStateLabel">DIAGNOSTICADA</string>
    <string name="WorkOrderLifeCycleFrag_OnProgressStateLabel">EN PROGRESO</string>
    <string name="WorkOrderLifeCycleFrag_DoneStateLabel">FINALIZADA</string>
    <string name="WorkOrderLifeCycleFrag_DoneState_ReviewWarrantyWarning">No te preocupes, si aceptas y encuentras fallas mas tarde, tienes tiempo hasta %1$s como garantia para inciar un reclamo si no acuerdas con el proveedor.</string>
    <string name="WorkOrderLifeCycleFrag_DoneState_ReviewClosingWarning">Tienes tiempo hasta el %1$s, luego de esta fecha la orden se cerrara, se liberara el pago al proveedor y no podras iniciar reclamos por fallas.</string>
    <string name="WorkOrderLifeCycleFrag_DoneState_ReviewClosingWarning_OutOfDate">Tenias tiempo hasta el %1$s, la orden ya no esta disponible para reclamos y cerra cerrada automaticamente.</string>
    <string name="WorkOrderLifeCycleFrag_ClosedStateLabel">CERRADA</string>
    <string-array name="ServicesArray">
        <item>Plomero</item>
        <item>Electricista</item>
        <item>Carpintero</item>
        <item>Albañil</item>
        <item>Tecnico de Computacion</item>
        <item>Tecnico de Refrigeracion</item>
    </string-array>
    <string-array name="LanguagesArray">
        <item>Árabe</item>
        <item>Bengalí</item>
        <item>Checo</item>
        <item>Chino(simplificado)</item>
        <item>Coreano</item>
        <item>Danés</item>
        <item>Español</item>
        <item>Finlandés</item>
        <item>Francés</item>
        <item>Griego</item>
        <item>Hebreo</item>
        <item>Hindi</item>
        <item>Húngaro</item>
        <item>Indonesio</item>
        <item>Inglés</item>
        <item>Italiano</item>
        <item>Japonés</item>
        <item>Lenguaje de señas</item>
        <item>Malayo</item>
        <item>Neerlandés</item>
        <item>Noruego</item>
        <item>Panyabí</item>
        <item>Polaco</item>
        <item>Portugués</item>
        <item>Ruso</item>
        <item>Sueco</item>
        <item>Tagalo</item>
        <item>Tailandés</item>
        <item>Turco</item>
        <item>Ucraniano</item>
    </string-array>
</resources>