<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    app:layout_scrollFlags="scroll">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/ItemsLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ProviderModeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:paddingTop="14dp"
                android:text="@string/ProviderModeFrag_SwitchCustomerModeTitle"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/ProviderModeTextViewMultiline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:gravity="start|top"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:text="@string/ProviderModeFrag_SwitchCustomerModeDesc" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/SaveChangesButton"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:contentDescription="TODO"
            app:backgroundTint="#FFFFFF"
            app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_save" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/BlackBackground_bottom_sheet"
        style="@style/CustomShapeAppearanceBottomSheetDialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        android:background="@color/design_default_color_on_secondary"
        android:clipToPadding="false"
        android:orientation="vertical"
        app:behavior_fitToContents="false"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="@string/bottom_sheet_behavior">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Specialization_bottom_sheet"
        style="@style/CustomShapeAppearanceBottomSheetDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingTop="10dp"
        app:behavior_fitToContents="true"
        app:behavior_halfExpandedRatio="0.6"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <View
            android:id="@+id/Languages_bottom_sheet_notch"
            android:layout_width="40dp"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:background="?attr/actionBarDivider"
            android:backgroundTint="#535353"
            android:backgroundTintMode="add" />

        <TextView
            android:id="@+id/ReadyLabelButtonSpecialization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="33dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/ReadyLabelButton"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/SpecializationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingTop="14dp"
            android:text="@string/ProviderModeFrag_Specialization_Tittle"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/SpecializationTextViewMultiline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:gravity="start|top"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/ProviderModeFrag_Specialization_Text" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/SpecializationLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:orientation="vertical" />
        </androidx.core.widget.NestedScrollView>


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>