<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:focusable="true"
    android:isScrollContainer="true"
    android:verticalScrollbarPosition="right"
    app:layout_anchorGravity="center_horizontal"
    tools:context=".ui.profile.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:outlineProvider="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:focusable="true"
            android:isScrollContainer="true"
            android:nestedScrollingEnabled="true"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/general_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="16dp"
                    android:outlineProvider="background"
                    app:cardCornerRadius="38dp"
                    app:cardPreventCornerOverlap="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/ProfilePicture"
                        android:layout_width="78dp"
                        android:layout_height="78dp"
                        android:adjustViewBounds="false"
                        android:contentDescription="@string/profileFrag_image_View"
                        android:cropToPadding="false"
                        android:scaleType="centerCrop"
                        app:srcCompat="@android:drawable/sym_def_app_icon" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/label_EditProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/profileFrag_text_profile_EditProfile"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@+id/text_profile1"
                    app:layout_constraintTop_toBottomOf="@+id/text_profile1" />

                <TextView
                    android:id="@+id/text_profile1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="16dp"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/label_EditProfile"
                    app:layout_constraintStart_toEndOf="@+id/cardView"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/profileFrag_text_profile_Name" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>